Rails World 2024 - Add Speaker Pages (#5)
Problem
We needed a page for a speaker, all speakers, and for sessions.

Solution
Add these 3 new pages.

Other Changes
Made slideshow a bit bigger for desktop
Put the sold out message on page, and not using tito. (loads faster)
Steps needed next
Update all sessions inside of _world_sessions/2024/session/ - I included place holders for all current speakers these will need to be updated.

* add sold out text to screen

* remove comment

* phone touchups

* line height

* add speakers md + style touchups

* No icons when no info for session

--- a/_includes/world/2024/speaker-card.html
+++ b/_includes/world/2024/speaker-card.html
@@ -1,4 +1,23 @@
-<div class="speakerCard">
+    
+{% assign speakerUrl = include.path | split: '/' | last | remove_first: '.md' %}
+
+<div 
+    class="speakerCard" 
+    role="button" 
+    tabindex="0" 
+    title="{{ include.first_name }} {{ include.last_name }}"
+    aria-label="Go to {{ include.first_name }} {{ include.last_name }}'s speaker page"
+    onclick="openWindow(
+        '/world/2024/speakers/{{ speakerUrl }}'
+        )
+    "
+    onkeydown="
+        handleEnterOrSpaceWindowOpen(
+            event, 
+            '/world/2024/speakers/{{ speakerUrl }}'
+        )
+    "
+>
     <div class="cardBackground">
         <div class="line"></div>
     </div>
@@ -19,3 +38,16 @@
         </div>
     </div>
 </div>
+<script>
+    function openWindow(url, openTab = false) {
+        const openType = openTab ? '_blank' : '_self';
+
+        window.open(url, openType);
+    }
+
+    function handleEnterOrSpaceWindowOpen(e, url) {
+        if (e.key === " " || e.key === "Enter" || e.key === "Spacebar") {
+            openWindow(url);
+        }
+    }
+</script>
