--- a/_sass/world/2024/base/_colors.scss
+++ b/_sass/world/2024/base/_colors.scss
@@ -2,6 +2,7 @@
     --red: #cb0c1c;
     --dark-red: #CF1618;
     --blue: #8BADDA;
+    --dark-blue: #7B9FD2;
     --purple-pale: #F3EDFF;
     --purple: #4E2A73;
     --purple-dark: #432463;
