--- a/assets/css/world-2024.scss
+++ b/assets/css/world-2024.scss
@@ -27,3 +27,6 @@
 @import 'world/2024/modules/sponsors';
 @import 'world/2024/modules/speakers';
 @import 'world/2024/modules/tito_widget';
+@import 'world/2024/modules/speaker_page';
+@import 'world/2024/modules/speakers_page';
+@import 'world/2024/modules/session';
