--- a/_includes/world/2024/header.html
+++ b/_includes/world/2024/header.html
@@ -9,6 +9,7 @@
 
     <div class="center">
       <a href="/world/2024/faq" class="link">FAQ</a>
+      <a href="/world/2024/speakers" class="link">Speakers</a>
     </div>
 
     <div class="sideContainer right">
@@ -30,6 +31,7 @@
 
     <div class="sideContainer right">
       <a href="/world/2024/faq" class="link">FAQ</a>
+      <a href="/world/2024/speakers" class="link">Speakers</a>
     </div>
   </nav>
 </header>
