--- a/_includes/world/2024/sections/sponsors.html
+++ b/_includes/world/2024/sections/sponsors.html
@@ -1,15 +1,17 @@
 <section class="content-container sponsor-information-text">
-    <h3>Sponsors</h3>
-    <p>
-        Sponsoring Rails World means showcasing your brand
-        to a global audience of Rails enthusiasts, developers,
-        and industry leaders. Let's make Rails World an
-        unforgettable experience for all. 
-    </p>
-    <a href="https://public.3.basecamp.com/p/xuZrxDiHj7vQbFzATqz8U8gc" aria-label="View prospectus" target="_blank"
-        class="button main large">
-        VIEW PROSPECTUS
-    </a>
+    <div class="titleContainer">
+        <h3>Sponsors</h3>
+        <p>
+            Sponsoring Rails World means showcasing your brand
+            to a global audience of Rails enthusiasts, developers,
+            and industry leaders. Let's make Rails World an
+            unforgettable experience for all. 
+        </p>
+        <a href="https://public.3.basecamp.com/p/xuZrxDiHj7vQbFzATqz8U8gc" aria-label="View prospectus" target="_blank"
+            class="button main large">
+            VIEW PROSPECTUS
+        </a>
+    </div>
     {% if site.data.world['2024'].sponsors %}
     <div class="sponsorCardsContainer">
         <div class="row platinumRow">
