--- a/_includes/world/2024/tito-widget.html
+++ b/_includes/world/2024/tito-widget.html
@@ -2,6 +2,11 @@
     <h3 class="ticketTitle">Tickets</h3>
     <div class="iframeContainer">
         <div id="tito-widget"></div>
+        <div class="soldOutContainer">
+            <p>
+                Sold out. If tickets are returned or released we will release another batch later this year.
+            </p>
+        </div>
     </div>
 </div>
 <script>
@@ -10,6 +15,7 @@
         ? "ultimateconf/2013"
         : "rails-world/rails-world-2024";
 
-    window.tito = window.tito || function () { (tito.q = tito.q || []).push(arguments); };
-    tito("widget.mount", { el: "#tito-widget", event })
+    // Add this back if tickets go back on sale
+    // window.tito = window.tito || function () { (tito.q = tito.q || []).push(arguments); };
+    // tito("widget.mount", { el: "#tito-widget", event })
 </script>
