--- a/_sass/world/2024/modules/_sponsors.scss
+++ b/_sass/world/2024/modules/_sponsors.scss
@@ -6,6 +6,20 @@
     background-color: var(--blue);
     gap: var(--header-and-paragraph-padding);
 
+    .titleContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: var(--header-and-paragraph-padding);
+
+        @media screen and (max-width: 800px) {
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+    }
+
     .sponsorCardsContainer {
         display: flex;
         flex-direction: column;
