Update speakers.html description

--- a/_includes/world/2024/sections/speakers.html
+++ b/_includes/world/2024/sections/speakers.html
@@ -7,10 +7,10 @@
 <section class="content-container speaker-cards">
     <div class="headerContainer">
         <div class="textContainer">
-            <h3>Keynote Speakers</h3>
+            <h3>Meet the Speakers</h3>
             <p>
-                Gain invaluable insights from our four keynote speakers on the present landscape of Rails and where
-                Rails is headed tomorrow and beyond. More speakers announced soon.
+                Gain invaluable insights from Rails World speakers on the future state of Rails and where
+                Rails is headed tomorrow and beyond.
             </p>
         </div>
         <div class="buttonsContainer">
