--- a/_includes/world/2024/sections/speakers.html
+++ b/_includes/world/2024/sections/speakers.html
@@ -1,9 +1,13 @@
 {% assign sorted_speakers = site.world_speakers | where_exp: 'item', 'item.path contains "2024"' | sort: 'last_name' %}
-{% assign keynote_speakers = sorted_speakers | where: 'keynote', true %}
-{% assign non_keynote_speakers = sorted_speakers | where_exp: "speaker", "speaker.keynote != true" | sort: "first_name"
-%}
 
+{% assign specific_order_speakers = sorted_speakers | where_exp: 'item', 'item.specific_order != null' | sort: 'specific_order' %}
 
+{% assign remaining_speakers = sorted_speakers | where_exp: 'item', 'item.specific_order == null' %}
+
+{% assign keynote_speakers = remaining_speakers | where: 'keynote', true %}
+{% assign non_keynote_speakers = remaining_speakers | where_exp: "speaker", "speaker.keynote != true" | sort: "first_name" %}
+    
+    
 <section class="content-container speaker-cards">
     <div class="headerContainer">
         <div class="textContainer">
@@ -23,6 +27,17 @@
         </div>
     </div>
     <div class="cardsContainer">
+        {% for speaker in specific_order_speakers %}
+        {%
+        include world/2024/speaker-card.html
+        first_name=speaker.first_name
+        last_name=speaker.last_name
+        role=speaker.role
+        company=speaker.company
+        photo=speaker.image_path
+        path=speaker.path
+        %}
+        {% endfor %}
         {% for speaker in keynote_speakers %}
         {%
         include world/2024/speaker-card.html
