remove "hasInfo" after session title

--- a/_layouts/world/2024/speaker.html
+++ b/_layouts/world/2024/speaker.html
@@ -71,7 +71,7 @@ layout: world/2024/default
                                     '/world/2024/{{ sessionUrl }}'
                                 )
                             ">
-                            <p class="sessionName">{{ session.title }} {{hasInfo}} </p>
+                            <p class="sessionName">{{ session.title }}</p>
                             {% if session.time %}
                             <div class="sessionTimeContainer">
                                 {% include world/2024/icons/clock.html %}
