Update head.html with metadata image

--- a/_includes/world/2024/head.html
+++ b/_includes/world/2024/head.html
@@ -13,7 +13,7 @@
 {% if page.og_image %}
 {% assign image = page.og_image | absolute_url %}
 {% else %}
-{% assign image = '/assets/world/opengraph.png' | absolute_url %}
+{% assign image = '/assets/world/rails-world-2024.png' | absolute_url %}
 {% endif %}
 
 {% assign url = page.url | absolute_url %}
