--- a/_sass/world/2024/modules/_session.scss
+++ b/_sass/world/2024/modules/_session.scss
@@ -134,13 +134,15 @@
         .bottomContainer {
             position: relative;
             display: flex;
-            align-items: flex-end;
-            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            justify-content: flex-end;
             width: 100%;
             padding-top: 190px;
             padding-bottom: 40px;
             border-radius: 0px 0px 10px 10px;
             background-color: var(--blue);
+            gap: 15px;
             // height: 500px;
             margin-top: -120px;
 
