--- a/assets/css/world-2024.scss
+++ b/assets/css/world-2024.scss
@@ -30,3 +30,4 @@
 @import 'world/2024/modules/speaker_page';
 @import 'world/2024/modules/speakers_page';
 @import 'world/2024/modules/session';
+@import 'world/2024/modules/agenda';
