--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,6 +1,9 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://rubyonrails.org/world/2024" target="_blank">
+    <a
+      class="common-button--text"
+      href="https://rubyonrails.org/world/2024"
+      target="_blank">
       Rails World is sold out. See you in Toronto Sept 26 & 27.
     </a>
   </p>
