--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,15 @@
 <footer class="footer common-background--grey common-padding--bottom common-padding--top common-shape--top-white-up-left">
-  <div class="footer__logo"><a href="/" aria-label="Ruby on Rails"></a></div>
+  <div class="footer__logo">
+    <a href="/" aria-label="Ruby on Rails"></a>
+  </div>
 
   {% if page.id == 'home' %}
     <div class="footer__options">
       <ul>
         {% for item in site.data.footer.items %}
-          <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+          <li>
+            <a href="{{ item.url }}">{{ item.title }}</a>
+          </li>
         {% endfor %}
       </ul>
     </div>
