--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,10 +20,15 @@
   {% assign image = '/assets/images/opengraph.png' | absolute_url %}
 {% endif %}
 
-{% assign url = page.url  | absolute_url %}
+{% assign url = page.url | absolute_url %}
 
 <head>
-  <title>{{ site.title }} &mdash; {% if page.title %}{{ page.title }}{% else %}{{ site.description }}{% endif %}</title>
+  <title>{{ site.title }} &mdash;
+    {% if page.title %}
+      {{ page.title }}
+    {% else %}
+      {{ site.description }}{% endif %}
+  </title>
   <meta charset="utf-8" />
   <meta content="ie=edge" http-equiv="x-ua-compatible" />
   <meta name="handheldfriendly" content="true" />
@@ -47,7 +52,7 @@
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "{% if page.collection == 'posts' %}BlogPosting{% else %}WebPage{% endif %}",
+      "@type": "{% if page.collection == 'posts' %} BlogPosting{% else %}WebPage{% endif %}",
       "mainEntityOfPage": {
         "@type": "WebPage",
         "@id": "{{ url }}"
@@ -57,15 +62,22 @@
       "description": "{{ description }}",
       "url": "{{ url }}",
       "image": "{{ image }}"{% if page.collection == 'posts' %},
-      "author": {
+      "author" : {
         "@type": "Person",
         "name": "{{ page.author }}"
       },
-      "datePublished": "{{ page.date | date_to_xmlschema }}"{% endif %}
+      "datePublished" : "{{ page.date | date_to_xmlschema }}"{% endif %}
     }
   </script>
-  <script defer data-domain="rubyonrails.org" src="https://plausible.io/js/script.js"></script>
+  <script
+    defer
+    data-domain="rubyonrails.org"
+    src="https://plausible.io/js/script.js"></script>
   <link rel="icon" href="/assets/images/favicon.png" />
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <link rel="alternate" type="application/rss+xml"  href="{{ site.feed_path }}" title="The official {{ site.title }} blog">
+  <link
+    rel="alternate"
+    type="application/rss+xml"
+    href="{{ site.feed_path }}"
+    title="The official {{ site.title }} blog">
 </head>
