--- a/_layouts/world/2023/agenda.html
+++ b/_layouts/world/2023/agenda.html
@@ -29,9 +29,13 @@ layout: world/2023/default
 <modal-component>
   <modal-mask></modal-mask>
   <turbo-frame
-    id="session_details" target="_top" class="session"
-    role="dialog" aria-modal="true" aria-labelledby="session_title" tabindex="-1">
-  </turbo-frame>
+    id="session_details"
+    target="_top"
+    class="session"
+    role="dialog"
+    aria-modal="true"
+    aria-labelledby="session_title"
+    tabindex="-1"></turbo-frame>
 </modal-component>
 
 <script type="text/javascript">
