--- a/_layouts/world/2023/default.html
+++ b/_layouts/world/2023/default.html
@@ -3,7 +3,10 @@
 <html lang="en" style="scroll-behavior: smooth">
   {% include world/2023/head.html %}
   <body>
-    <a href="#main-content" class="button button--light skip-navigation" tabindex="0">
+    <a
+      href="#main-content"
+      class="button button--light skip-navigation"
+      tabindex="0">
       Skip to main content
     </a>
 
