--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,16 @@
 <nav class="nav">
-  <a class="nav__logo" href="/" aria-label="Ruby on Rails"></a>
+  <a
+    class="nav__logo"
+    href="/"
+    aria-label="Ruby on Rails"></a>
 
   {% if page.id == 'home' %}
-    <input class="nav__checkbox" id="nav__checkbox" type="checkbox" role="button" aria-label="menu" />
+    <input
+      class="nav__checkbox"
+      id="nav__checkbox"
+      type="checkbox"
+      role="button"
+      aria-label="menu" />
 
     <label class="nav__toggle" for="nav__checkbox">
       <span></span>
@@ -11,14 +19,22 @@
     <div class="nav__options">
       <div>
         <ul>
-          {% for option in site.data.nav.items limit:4 %}
-            <li><a href="{{ option.url }}"><span>{{ option.title }}</span></a></li>
+          {% for option in site.data.nav.items limit: 4 %}
+            <li>
+              <a href="{{ option.url }}">
+                <span>{{ option.title }}</span>
+              </a>
+            </li>
           {% endfor %}
         </ul>
 
         <ul>
-          {% for option in site.data.nav.items limit:4 offset:4 %}
-            <li><a href="{{ option.url }}"><span>{{ option.title }}</span></a></li>
+          {% for option in site.data.nav.items limit: 4 offset: 4 %}
+            <li>
+              <a href="{{ option.url }}">
+                <span>{{ option.title }}</span>
+              </a>
+            </li>
           {% endfor %}
         </ul>
       </div>
