--- a/_includes/post.html
+++ b/_includes/post.html
@@ -2,7 +2,9 @@
   <h6>{{ post.date | date: '%B %-d, %Y' }}</h6>
 
   <dl>
-    <dt><a href="{{ post.url }}">{{ post.title | strip_html }}</a></dt>
+    <dt>
+      <a href="{{ post.url }}">{{ post.title | strip_html }}</a>
+    </dt>
     <dd>{{ post.content | strip_html | truncatewords: 30 }}</dd>
   </dl>
 </div>
